Fix avatar & title alignment on breadcrumb hover

--- a/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
+++ b/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
@@ -227,16 +227,14 @@ $tab-container-height-small: $ca-grid * 2.5;
     max-width: 100%;
   }
 
-  @include title-block-under-1366 {
+  @media (min-width: $kz-layout-breakpoints-large) {
     display: block;
   }
 
-  @include title-block-medium-and-small {
-    display: none;
-  }
-
-  .hasSubtitle & {
-    transform: translateY(10px);
+  .hasSubtitle.hasAvatar & {
+    @include title-block-under-1366 {
+      transform: translateY(10px);
+    }
   }
 
   .hasLongTitle & {
@@ -389,16 +387,49 @@ $tab-container-height-small: $ca-grid * 2.5;
   .breadcrumb:focus + & {
     opacity: 0;
 
+    /* Unfortunately since the avatar, subtitle and length of the
+     * subtitle can all affect the height of the content area here,
+     * we have some fragile hacks to cover each combination.
+     * The subtitle needs to wrap if long, and is vertically centred
+     * instead of positioned along the same baseline as the title,
+     * which is what it does when short. This all adds to the complexity
+     * and we made a call to meet the design requirements under a
+     * deadline instead of exploring a less fragile solution.
+     * (A better solution might involve behaviour where this element that
+     * fades out retains its visual space à la `visibility: hidden`.)
+     */
     @include title-block-under-1645 {
       left: $breadcrumb-circle-width + 12px;
-      transform: translateY(2px);
       position: absolute;
+      transform: translateY(2px);
+
+      .hasAvatar & {
+        transform: translateY(0);
+      }
+
+      .hasSubtitle & {
+        transform: translateY(2px);
+      }
+
+      .hasAvatar.hasSubtitle & {
+        transform: translateY(0);
+      }
+
+      .hasSubtitle.hasLongTitle & {
+        transform: translateY(2px);
+      }
     }
 
     @include title-block-under-1366 {
       transform: translateY(4px);
 
+      .hasAvatar & {
+        transform: translateY(0);
+      }
       .hasSubtitle & {
+        transform: translateY(-10px);
+      }
+      .hasAvatar.hasSubtitle & {
         transform: translateY(-10px);
       }
       .hasSubtitle.hasLongTitle & {
